fixed spacing error page and reworked the button to look nicer on mobile view

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -3,14 +3,12 @@ body {
 
 }
 
-
-
-
-
 .container-fluid{
-    padding-left: 0;
-    padding-right:0;
+  padding-left: 0rem;
+  padding-right: 0rem;
+  overflow: hidden;
 }
+
 
 
 .d-block .w-100 {
@@ -80,9 +78,7 @@ body {
 }
 
 
-.featured_products_section .row{
-    margin-right: -15px;
-}
+
 
 
 .featured_products {
@@ -94,10 +90,9 @@ body {
     padding-top: 50px;
 }
 
-/*.card {*/
-/*    margin-left: 30px;*/
-/*    margin-bottom: 30px;*/
-/*}*/
+.card {
+    margin-bottom: 30px;
+}
 
 .card-text{
     text-align: center;
@@ -141,6 +136,9 @@ body {
     padding-top: 50px;
 }
 
+
+/*Animations*/
+
 button{
     border-radius: 4px;
     border: 3px solid #fff;
@@ -148,7 +146,7 @@ button{
     font-size: inherit;
     background: none;
     cursor: pointer;
-    padding: 25px 80px;
+    padding: 40px 40px;
     display: inline-block;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -178,4 +176,11 @@ button:hover, button:active {
 .order-button{
     margin-top:50%;
     margin-left: 50px;
+}
+
+@media(max-width: 576px) {
+    .order-button{
+    margin-top: 20%;
+    width:100%;
+}
 }
